Bug 98238 - commands 'from' and 'to' and 'csub' are rendered wrong
Summary: commands 'from' and 'to' and 'csub' are rendered wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: bibisected
: 99591 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-02-27 18:23 UTC by Regina Henschel
Modified: 2016-10-25 17:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 5.1.1.1 <> 5.2.0.0. 20160225 (66.11 KB, image/png)
2016-02-28 03:24 UTC, m_a_riosv
Details
Bad category "Operators" in "Elements" window (8.21 KB, image/png)
2016-05-01 15:44 UTC, Regina Henschel
Details
oper %union (5.38 KB, application/vnd.oasis.opendocument.formula)
2016-05-10 18:39 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2016-02-27 18:23:03 UTC
I use Version: 5.2.0.0.alpha0+
Build ID: 85fcf15ff41ceb95f46dee586ff7187551be4955
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-02-27_09:23:38
Locale: de-DE (de_DE)


1. Open Formula Editor alone or for embedded formula in Writer
2. Enter in command window
       A=int from 2 to 7 {x^2} `{nitalic d}x

Notice, the limits are not visible.

3. Goto Format > Spacing > Category Borders. Set top and bottom to 2mm.

Now you see the limits, but they are placed wrongly. They are right of the integral sign and not below and above it.

Try the same with command
sum from { i=1} to k { i^2 }

or try
lim from { x toward infinity }( 1 over x ) =0
or
lim csub { x toward infinity }( 1 over x ) =0

The limits are wrong in all cases.

The limits are wrong too, if you switch to text mode.

This is a very new regression. The formulas are fine at least till Version: 5.2.0.0.alpha0+
Build ID: 000df1832b54ba8f48c7f1c4c1cd92b70f6402da
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-18_01:08:28
Locale: de-DE (de_DE)
Comment 1 m_a_riosv 2016-02-28 03:24:12 UTC
Created attachment 123050 [details]
Screenshot 5.1.1.1 <> 5.2.0.0. 20160225

Reproducible
Win10x64
Version: 5.2.0.0.alpha0+
Build ID: 98a8eafa915b8d57b8bdccab9981e537d77f6f4a
CPU Threads: 4; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-02-25_00:49:33

Image with how they look with <5.1.1.1> and <5.2.0.0-20160225 new profile>
Comment 2 Regina Henschel 2016-05-01 15:44:42 UTC
Created attachment 124764 [details]
Bad category "Operators" in "Elements" window

The display of the lim and sum operators in the Elements window seems to be affected too from this bug.
Comment 3 Regina Henschel 2016-05-01 16:06:19 UTC
This version is the last good version on my PC.
Version: 5.2.0.0.alpha0+
Build ID: c81eddbb20c84280aa64c712e34c829380b24527
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-01-22_04:18:42
Locale: de-DE (de_DE)
Comment 4 Regina Henschel 2016-05-09 22:35:28 UTC
The bug has been introduced with the solution for issue 53472. When I revert the commit 746633bd0315939fd5e0b50c90692d356d2ed678, this bug is fixed and bug 99591 too.
Comment 5 raal 2016-05-10 06:41:46 UTC
(In reply to Regina Henschel from comment #4)
> The bug has been introduced with the solution for issue 53472. When I revert
> the commit 746633bd0315939fd5e0b50c90692d356d2ed678, this bug is fixed and
> bug 99591 too.

deleting bibisectrequest keyword
Comment 6 raal 2016-05-10 06:42:24 UTC
*** Bug 99591 has been marked as a duplicate of this bug. ***
Comment 7 Regina Henschel 2016-05-10 18:39:40 UTC
Created attachment 124956 [details]
oper %union

Self defined large operators is broken too. The first "union" is a simple character. The second "union" is an operator and should be large.
Comment 8 Commit Notification 2016-05-16 06:17:42 UTC
Jan Iversen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e265ea36df02310881e959a031b74578b323bfa5

tdf#98238, tdf#99591 reverted old commit

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Björn Michaelsen 2016-07-21 08:24:48 UTC
(In reply to Commit Notification from comment #8)
> Jan Iversen committed a patch related to this issue.
> It has been pushed to "master":

CC'ing Jan as author of the fix.
Patch has been on master for more than a month with no complaints, thus assuming this fixed. Feel free to revert should this be wrong. => RESOLVED/FIXED
Comment 10 Regina Henschel 2016-10-25 17:24:05 UTC
Verified in Version: 5.2.2.2
Build ID: 8f96e87c890bf8fa77463cd4b640a2312823f3ad
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: de-DE (de_DE); Calc: group